--- a/src/app.scss
+++ b/src/app.scss
@@ -993,7 +993,7 @@ span.progress-percent.less-than-10 {
   .budget-amount {
     width: 80px;
     text-align: right;
-    text-weight: bold;
+    font-weight: bold;
 
     &.info {
       font-weight: bold;
